# beast_utils

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  README_cn.md  TODO.md
base/: console_close.cpp  console_close.h  memory_utils.hpp  memory_utils_base.hpp  task_utils.hpp  utils.cpp  utils.h
export/: beast_utils_export.cpp
include/: beast_utils.h
net/: detect_session.cpp  detect_session.h  http_session.hpp  http_session_plain.cpp  http_session_plain.h  http_session_ssl.cpp  http_session_ssl.h  listener.cpp  listener.h  net_utils.cpp  net_utils.h  websocket_session.hpp  websocket_session_factory.hpp  websocket_session_plain.h  websocket_session_ssl.h
os_glue/: os_glue.h  readme.md
os_glue/linux/: os_glue_linux.cpp
os_glue/windows/: os_glue_windows.cpp
script/: build.bat  rebuild.bat
src/: app_resource.cpp  app_resource.h  scaffold_handles.cpp  scaffold_handles.h  ssl_certificate.cpp  ssl_certificate.h
